COMMERCE-8473 Fixed z-index

--- a/modules/apps/frontend-taglib/frontend-taglib/src/main/resources/META-INF/resources/side_panel_content/main.scss
+++ b/modules/apps/frontend-taglib/frontend-taglib/src/main/resources/META-INF/resources/side_panel_content/main.scss
@@ -6,6 +6,7 @@ $dialog-footer-height: 70px;
 .side-panel-iframe {
 	.dialog-footer {
 		position: fixed;
+		z-index: 999 !important;
 	}
 
 	.page-header {
